erDiagram
    regions ||--o{ companies : "contiene"
    companies ||--o{ user_roles : "asignada a"
    companies ||--o{ user_companies : "tiene"

    roles ||--o{ role_permissions : "tiene permisos"
    roles ||--o{ user_roles : "asignada a"

    modules ||--o{ role_permissions : "tiene permisos"

    users ||--o{ user_roles : "tiene roles"
    users ||--o{ user_companies : "pertenece a"
    users ||--o{ equipment : "tiene asignado"
    users ||--o{ services : "tiene asignado"

    equipment ||--o{ services : "tiene instalado"

    services ||--o{ service_payments : "tiene pagos registrados"

    regions {
        int id PK
        string country
        string province
        string risk_level
    }

    companies {
        int id PK
        string name
        int region_id FK
    }

    roles {
        int id PK
        string name
        jsonb permissions
    }

    modules {
        int id PK
        string name
        string description
    }

    role_permissions {
        int role_id PK, FK
        int module_id PK, FK
        boolean can_create
        boolean can_read
        boolean can_update
        boolean can_delete
    }

    users {
        string email PK
        string first_name
        string last_name
        string department
    }

    user_roles {
        string user_email PK, FK
        int role_id PK, FK
        int company_id PK, FK
        date start_date
        date end_date
    }

    user_companies {
        string user_email PK, FK
        int company_id PK, FK
        boolean is_primary
        registrado
    }

    equipment {
        int id PK
        string type
        string serial_number
        string assigned_to_email FK
    }

    services {
        int id PK
        string service_name
        string assigned_to_user_email FK
        int assigned_to_equipment FK
    }

    service_payments {
        int id PK
        int service_id FK
        decimal amount
        jsonb attachments
    }
